unit of work, global exceptions

--- a/ChallengeN5.Services/ChallengeN5.Services.csproj
+++ b/ChallengeN5.Services/ChallengeN5.Services.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ChallengeN5.Repositories\ChallengeN5.Repositories.csproj" />
+  </ItemGroup>
+
 </Project>
