--- a/ChallengeN5.Api/ChallengeN5.Api.csproj
+++ b/ChallengeN5.Api/ChallengeN5.Api.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
       <PrivateAssets>all</PrivateAssets>
@@ -20,6 +22,11 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ChallengeN5.Repositories\ChallengeN5.Repositories.csproj" />
+    <ProjectReference Include="..\ChallengeN5.Services\ChallengeN5.Services.csproj" />
   </ItemGroup>
 
 </Project>
