--- a/ChallengeN5.Api/appsettings.Development.json
+++ b/ChallengeN5.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "N5Challenge": "Data Source=DESKTOP-6MQF69Q\\SQLEXPRESS;Initial Catalog=N5Challenge;User Id=sa;Password=123456.;TrustServerCertificate=True;Encrypt=false"
   }
 }
