add service kafka

--- a/ChallengeN5.Api/appsettings.Development.json
+++ b/ChallengeN5.Api/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "N5Challenge": "Data Source=DESKTOP-6MQF69Q\\SQLEXPRESS;Initial Catalog=N5Challenge;User Id=sa;Password=123456.;TrustServerCertificate=True;Encrypt=false"
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092"
   }
 }
