--- a/ChallengeN5.Api/appsettings.Development.json
+++ b/ChallengeN5.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "N5Challenge": "Data Source=DESKTOP-6MQF69Q\\SQLEXPRESS;Initial Catalog=N5Challenge;User Id=sa;Password=123456.;TrustServerCertificate=True;Encrypt=false"
+    "N5Challenge": "Data Source=DESKTOP-6MQF69Q\\SQLEXPRESS;Initial Catalog=N5Challenge;User Id=eelicegui;Password=123456;TrustServerCertificate=True;Encrypt=false"
   },
   "Kafka": {
     "BootstrapServers": "localhost:9092"
