--- a/ChallengeN5.Api/appsettings.json
+++ b/ChallengeN5.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "N5Challenge": "Data Source=localhost;Initial Catalog=N5Challenge;User Id=sa;Password=ch@allegneN5_password;TrustServerCertificate=True;Encrypt=false"
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092"
+  }
 }
